[package]
name = "leopard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pingora = { version = "0.1", features = ["proxy"] }
structopt = "0.3"
async-trait = "0.1"
http = "1.1"
pretty_env_logger = "0.5"
log = "0.4"
